--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^5.8.5",
-    "sequelize-cli": "^5.4.0"
+    "sequelize-cli": "^5.4.0",
+    "stripe": "^6.36.0"
   }
 }
