--- a/package.json
+++ b/package.json
@@ -18,30 +18,30 @@
   },
   "homepage": "https://github.com/csoto09/blocipedia#readme",
   "devDependencies": {
-    "jasmine": "^3.4.0",
-    "request": "^2.88.0"
+    "jasmine": ">=3.4.0",
+    "request": ">=2.88.0"
   },
   "dependencies": {
-    "@sendgrid/mail": "^6.4.0",
-    "bcrypt": "^3.0.6",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "dialogs": "^2.0.1",
-    "dotenv": "^8.0.0",
-    "ejs": "^2.6.1",
-    "express": "^4.17.1",
-    "express-flash": "0.0.2",
-    "express-session": "^1.16.1",
-    "express-validator": "^5.3.1",
-    "markdown-it": "^8.4.2",
-    "faker": "^4.1.0",
-    "morgan": "^1.9.1",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "pg": "^7.11.0",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^5.15.1",
-    "sequelize-cli": "^5.4.0",
-    "stripe": "^6.36.0"
+    "@sendgrid/mail": ">=6.4.0",
+    "bcrypt": ">=3.0.6",
+    "bcryptjs": ">=2.4.3",
+    "body-parser": ">=1.19.0",
+    "dialogs": ">=2.0.1",
+    "dotenv": ">=8.0.0",
+    "ejs": ">=2.6.1",
+    "express": ">=4.17.1",
+    "express-flash": ">=0.0.2",
+    "express-session": ">=1.16.1",
+    "express-validator": ">=5.3.1",
+    "faker": ">=4.1.0",
+    "markdown-it": ">=8.4.2",
+    "morgan": ">=1.9.1",
+    "passport": ">=0.4.0",
+    "passport-local": ">=1.0.0",
+    "pg": ">=7.11.0",
+    "pg-hstore": ">=2.3.3",
+    "sequelize": ">=5.15.1",
+    "sequelize-cli": ">=5.4.0",
+    "stripe": ">=6.36.0"
   }
 }
