--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "request": ">=2.88.0"
   },
   "dependencies": {
-    "@sendgrid/mail": ">=6.4.0",
+    "@sendgrid/mail": "^7.4.0",
     "bcrypt": ">=3.0.6",
     "bcryptjs": ">=2.4.3",
     "body-parser": ">=1.19.0",
